[UPDATES/FIXES]Обновления и исправления в шаблонах
Множественные обновления и исправления в шаблонах:
1. Обновление всех продуктовых картинок.
2. Небольшие Исправления в шаблонах
3. Добавление слайдера на странице с продуктом
4. Правка ссылок в различных шаблонах для работы на github
5. Исправление кнопок в шапке

6. Готовая страница с партнерами
7. Готовая страница с категориями
8. Готовая страница с продуктами
9. Готовая страница с продуктом

--- a/app/scss/base/mixins.scss
+++ b/app/scss/base/mixins.scss
@@ -43,7 +43,7 @@ div {
 Шрифт PFRegalTextPro для заголовков в блоках. В шрифте уже прописаны медиазапросы для измненения размеров текста
 Пример использования:
 div {
-  @include UI-Font-PFRegalTextPro;
+  @include UI-Font-PFRegalTextPro-bold;
   ...
 }
 */
