--- a/app/scss/base/pngSprite.scss
+++ b/app/scss/base/pngSprite.scss
@@ -9,22 +9,55 @@
 //
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites;
-$icon-cheese-main-slider-1-name: 'icon-cheese-main-slider-1';
-$icon-cheese-main-slider-1-x: 0px;
-$icon-cheese-main-slider-1-y: 0px;
-$icon-cheese-main-slider-1-offset-x: 0px;
-$icon-cheese-main-slider-1-offset-y: 0px;
-$icon-cheese-main-slider-1-width: 557px;
-$icon-cheese-main-slider-1-height: 633px;
-$icon-cheese-main-slider-1-total-width: 557px;
-$icon-cheese-main-slider-1-total-height: 633px;
-$icon-cheese-main-slider-1-image: '../images/sprite.png';
-$icon-cheese-main-slider-1: (0px, 0px, 0px, 0px, 557px, 633px, 557px, 633px, '../images/sprite.png', 'icon-cheese-main-slider-1', );
-$spritesheet-width: 557px;
-$spritesheet-height: 633px;
+$icon-img-catalog-product-1-name: 'icon-img-catalog-product-1';
+$icon-img-catalog-product-1-x: 0px;
+$icon-img-catalog-product-1-y: 0px;
+$icon-img-catalog-product-1-offset-x: 0px;
+$icon-img-catalog-product-1-offset-y: 0px;
+$icon-img-catalog-product-1-width: 64px;
+$icon-img-catalog-product-1-height: 65px;
+$icon-img-catalog-product-1-total-width: 169px;
+$icon-img-catalog-product-1-total-height: 115px;
+$icon-img-catalog-product-1-image: '../images/sprite.png';
+$icon-img-catalog-product-1: (0px, 0px, 0px, 0px, 64px, 65px, 169px, 115px, '../images/sprite.png', 'icon-img-catalog-product-1', );
+$icon-img-catalog-product-2-name: 'icon-img-catalog-product-2';
+$icon-img-catalog-product-2-x: 64px;
+$icon-img-catalog-product-2-y: 0px;
+$icon-img-catalog-product-2-offset-x: -64px;
+$icon-img-catalog-product-2-offset-y: 0px;
+$icon-img-catalog-product-2-width: 63px;
+$icon-img-catalog-product-2-height: 54px;
+$icon-img-catalog-product-2-total-width: 169px;
+$icon-img-catalog-product-2-total-height: 115px;
+$icon-img-catalog-product-2-image: '../images/sprite.png';
+$icon-img-catalog-product-2: (64px, 0px, -64px, 0px, 63px, 54px, 169px, 115px, '../images/sprite.png', 'icon-img-catalog-product-2', );
+$icon-img-catalog-product-3-name: 'icon-img-catalog-product-3';
+$icon-img-catalog-product-3-x: 127px;
+$icon-img-catalog-product-3-y: 0px;
+$icon-img-catalog-product-3-offset-x: -127px;
+$icon-img-catalog-product-3-offset-y: 0px;
+$icon-img-catalog-product-3-width: 42px;
+$icon-img-catalog-product-3-height: 52px;
+$icon-img-catalog-product-3-total-width: 169px;
+$icon-img-catalog-product-3-total-height: 115px;
+$icon-img-catalog-product-3-image: '../images/sprite.png';
+$icon-img-catalog-product-3: (127px, 0px, -127px, 0px, 42px, 52px, 169px, 115px, '../images/sprite.png', 'icon-img-catalog-product-3', );
+$icon-img-catalog-product-4-name: 'icon-img-catalog-product-4';
+$icon-img-catalog-product-4-x: 0px;
+$icon-img-catalog-product-4-y: 65px;
+$icon-img-catalog-product-4-offset-x: 0px;
+$icon-img-catalog-product-4-offset-y: -65px;
+$icon-img-catalog-product-4-width: 51px;
+$icon-img-catalog-product-4-height: 50px;
+$icon-img-catalog-product-4-total-width: 169px;
+$icon-img-catalog-product-4-total-height: 115px;
+$icon-img-catalog-product-4-image: '../images/sprite.png';
+$icon-img-catalog-product-4: (0px, 65px, 0px, -65px, 51px, 50px, 169px, 115px, '../images/sprite.png', 'icon-img-catalog-product-4', );
+$spritesheet-width: 169px;
+$spritesheet-height: 115px;
 $spritesheet-image: '../images/sprite.png';
-$spritesheet-sprites: ($icon-cheese-main-slider-1, );
-$spritesheet: (557px, 633px, '../images/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($icon-img-catalog-product-1, $icon-img-catalog-product-2, $icon-img-catalog-product-3, $icon-img-catalog-product-4, );
+$spritesheet: (169px, 115px, '../images/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
