--- a/app/scss/base/svgSprite.scss
+++ b/app/scss/base/svgSprite.scss
@@ -8,7 +8,7 @@
     display: inline-block;
     background-image: url("../images/sprite.svg");
     background-repeat: no-repeat;
-    background-size: 40.3em 249.7em;
+    background-size: 40.3em 263.8em;
 }
 
 .no-svg .svg-icon:before {
@@ -125,17 +125,8 @@
 
 
 
-  .svg-icon.svg-img-catalog-product-1:before {
-      background-position: 0em -63.2em;
-      width: 5.1em;
-      height: 5.3em;
-  }
-
-
-
-
   .svg-icon.svg-instagram:before {
-      background-position: 0em -68.5em;
+      background-position: 0em -63.2em;
       width: 1.8em;
       height: 1.8em;
   }
@@ -144,7 +135,7 @@
 
 
   .svg-icon.svg-logotype:before {
-      background-position: 0em -70.3em;
+      background-position: 0em -65em;
       width: 15.1em;
       height: 9.6em;
   }
@@ -153,7 +144,7 @@
 
 
   .svg-icon.svg-logotype-short:before {
-      background-position: 0em -79.9em;
+      background-position: 0em -74.6em;
       width: 15.2em;
       height: 4.1em;
   }
@@ -162,7 +153,7 @@
 
 
   .svg-icon.svg-main-link-arrow:before {
-      background-position: 0em -84em;
+      background-position: 0em -78.7em;
       width: 1.3em;
       height: 0.8em;
   }
@@ -171,7 +162,7 @@
 
 
   .svg-icon.svg-main-link-plus:before {
-      background-position: 0em -84.8em;
+      background-position: 0em -79.5em;
       width: 1.2em;
       height: 1.2em;
   }
@@ -180,7 +171,7 @@
 
 
   .svg-icon.svg-navigation:before {
-      background-position: 0em -86em;
+      background-position: 0em -80.7em;
       width: 7.9em;
       height: 7.8em;
   }
@@ -189,7 +180,7 @@
 
 
   .svg-icon.svg-ok:before {
-      background-position: 0em -93.8em;
+      background-position: 0em -88.5em;
       width: 1.4em;
       height: 2.4em;
   }
@@ -198,7 +189,7 @@
 
 
   .svg-icon.svg-pack:before {
-      background-position: 0em -96.2em;
+      background-position: 0em -90.9em;
       width: 40.3em;
       height: 24.2em;
   }
@@ -207,7 +198,7 @@
 
 
   .svg-icon.svg-pan:before {
-      background-position: 0em -120.4em;
+      background-position: 0em -115.1em;
       width: 14.8em;
       height: 6.6em;
   }
@@ -216,7 +207,7 @@
 
 
   .svg-icon.svg-paste:before {
-      background-position: 0em -127em;
+      background-position: 0em -121.7em;
       width: 9.5em;
       height: 6.1em;
   }
@@ -225,7 +216,7 @@
 
 
   .svg-icon.svg-presentation:before {
-      background-position: 0em -133.1em;
+      background-position: 0em -127.8em;
       width: 7.8em;
       height: 9.8em;
   }
@@ -234,7 +225,7 @@
 
 
   .svg-icon.svg-prevslogo:before {
-      background-position: 0em -142.9em;
+      background-position: 0em -137.6em;
       width: 24.2em;
       height: 24.3em;
   }
@@ -243,7 +234,7 @@
 
 
   .svg-icon.svg-print-main:before {
-      background-position: 0em -167.2em;
+      background-position: 0em -161.9em;
       width: 16.1em;
       height: 16.1em;
   }
@@ -251,8 +242,17 @@
 
 
 
+  .svg-icon.svg-print-product:before {
+      background-position: 0em -178em;
+      width: 19.4em;
+      height: 19.4em;
+  }
+
+
+
+
   .svg-icon.svg-promo-box-top-text:before {
-      background-position: 0em -183.3em;
+      background-position: 0em -197.4em;
       width: 23.2em;
       height: 13.4em;
   }
@@ -261,7 +261,7 @@
 
 
   .svg-icon.svg-rhombus:before {
-      background-position: 0em -196.7em;
+      background-position: 0em -210.8em;
       width: 13.6em;
       height: 13.4em;
   }
@@ -270,7 +270,7 @@
 
 
   .svg-icon.svg-salad:before {
-      background-position: 0em -210.1em;
+      background-position: 0em -224.2em;
       width: 9.6em;
       height: 7.9em;
   }
@@ -279,7 +279,7 @@
 
 
   .svg-icon.svg-shawarma:before {
-      background-position: 0em -218em;
+      background-position: 0em -232.1em;
       width: 9.6em;
       height: 5.3em;
   }
@@ -288,7 +288,7 @@
 
 
   .svg-icon.svg-statistics:before {
-      background-position: 0em -223.3em;
+      background-position: 0em -237.4em;
       width: 10.3em;
       height: 7em;
   }
@@ -297,7 +297,7 @@
 
 
   .svg-icon.svg-timer:before {
-      background-position: 0em -230.3em;
+      background-position: 0em -244.4em;
       width: 3.3em;
       height: 3.3em;
   }
@@ -306,7 +306,7 @@
 
 
   .svg-icon.svg-twitter:before {
-      background-position: 0em -233.6em;
+      background-position: 0em -247.7em;
       width: 2em;
       height: 1.8em;
   }
@@ -315,7 +315,7 @@
 
 
   .svg-icon.svg-vk:before {
-      background-position: 0em -235.4em;
+      background-position: 0em -249.5em;
       width: 2.6em;
       height: 1.6em;
   }
@@ -324,7 +324,7 @@
 
 
   .svg-icon.svg-vote:before {
-      background-position: 0em -237em;
+      background-position: 0em -251.1em;
       width: 12.1em;
       height: 11em;
   }
@@ -333,7 +333,7 @@
 
 
   .svg-icon.svg-wikipedia:before {
-      background-position: 0em -248em;
+      background-position: 0em -262.1em;
       width: 2.8em;
       height: 1.7em;
   }
