--- a/app/templates/modules/footer.pug
+++ b/app/templates/modules/footer.pug
@@ -10,15 +10,15 @@ mixin footer()
         .footer-box-nav-production
           .footer-box-nav-production-left
             .footer-box-nav-production-left-group
-              a(href="#") Продукция
+              a(href="./catalog.html") Продукция
               .footer-box-nav-production-left-group-desc Сыры, масла, сыворотка
             .footer-box-nav-production-left-group
               a(href="#") О нас
               .footer-box-nav-production-left-group-desc Кто мы и как работаем
           .footer-box-nav-production-right
             a(href="#") Где купить
-            a(href="#") Новости и акции
-            a(href="#") Партнерам
+            a(href="./news_list.html") Новости и акции
+            a(href="./partners.html") Партнерам
             a(href="#") Контакты
         .footer-box-nav-contact
           .footer-box-nav-contact-group
