--- a/app/templates/modules/header.pug
+++ b/app/templates/modules/header.pug
@@ -26,8 +26,8 @@ mixin header
       .header-buttom
         .header-buttom-nav
           a(href="#") Как мы это делаем
-          a(href="#") Новости и акции
-          a(href="#") Партнерам
+          a(href="./news_list.html") Новости и акции
+          a(href="./partners.html") Партнерам
           a(href="#") Рецепты
           a(href="#") Контакты
         .header-buttom-help
