--- a/app/templates/pages/catalog-products.pug
+++ b/app/templates/pages/catalog-products.pug
@@ -15,23 +15,23 @@ block content
         .main-products-category
           a.main-products-category-el(href="#")
             .category-el-icon
-              +icon('img-catalog-product-1', 'svg').icon-background
+              +icon('img-catalog-product-1', 'png').icon-background
             .category-el-title Адыгейские сыры
           a.main-products-category-el.active(href="#")
             .category-el-icon
-              +icon('img-catalog-product-1', 'svg').icon-background
+              +icon('img-catalog-product-2', 'png').icon-background
             .category-el-title Вытяжные сыры
           a.main-products-category-el(href="#")
             .category-el-icon
-              +icon('img-catalog-product-1', 'svg').icon-background
+              +icon('img-catalog-product-3', 'png').icon-background
             .category-el-title Масло и спред
           a.main-products-category-el(href="#")
             .category-el-icon
-              +icon('img-catalog-product-1', 'svg').icon-background
+              +icon('img-catalog-product-4', 'png').icon-background
             .category-el-title Сыворотка
             
         .main-products-items
-          a.products-el(href="#")
+          a.products-el(href="./product.html.html")
             .products-el-img
               img(src="./images/img-products-1-min.png")
               img(src="./images/img-products-1-min.png")
@@ -42,7 +42,7 @@ block content
               +icon('cloud-2', 'svg').cloud-1
               +icon('cloud-1', 'svg').cloud-2
 
-          a.products-el(href="#")
+          a.products-el(href="./product.html")
             .products-el-img
               img(src="./images/img-products-2-min.png")
               img(src="./images/img-products-2-min.png")
@@ -53,7 +53,7 @@ block content
               +icon('cloud-2', 'svg').cloud-1
               +icon('cloud-1', 'svg').cloud-2
 
-          a.products-el(href="#")
+          a.products-el(href="./product.html")
             .products-el-img
               img(src="./images/img-products-3-min.png")
               img(src="./images/img-products-3-min.png")
@@ -64,7 +64,7 @@ block content
               +icon('cloud-2', 'svg').cloud-1
               +icon('cloud-1', 'svg').cloud-2
 
-          a.products-el(href="#")
+          a.products-el(href="./product.html")
             .products-el-img
               img(src="./images/img-products-4-min.png")
               img(src="./images/img-products-4-min.png")
@@ -75,7 +75,7 @@ block content
               +icon('cloud-2', 'svg').cloud-1
               +icon('cloud-1', 'svg').cloud-2
 
-          a.products-el(href="#")
+          a.products-el(href="./product.html")
             .products-el-img
               img(src="./images/img-products-5-min.png")
               img(src="./images/img-products-5-min.png")
@@ -86,7 +86,7 @@ block content
               +icon('cloud-2', 'svg').cloud-1
               +icon('cloud-1', 'svg').cloud-2
 
-          a.products-el(href="#")
+          a.products-el(href="./product.html")
             .products-el-img
               img(src="./images/img-products-6-min.png")
               img(src="./images/img-products-6-min.png")
