--- a/app/templates/pages/catalog.pug
+++ b/app/templates/pages/catalog.pug
@@ -11,19 +11,19 @@ block content
     +header()
     section.main-catalog
       .content.main-catalog-box
-        a.catalog-el(href="/catalog-products.html")
+        a.catalog-el(href="./catalog-products.html")
           .catalog-el-img
             img(src="./images/img-product-1.png", alt="")
           .catalog-el-text Адыгейские сыры
-        a.catalog-el(href="/catalog-products.html")
+        a.catalog-el(href="./catalog-products.html")
           .catalog-el-img
             img(src="./images/img-product-2.png", alt="")
           .catalog-el-text Вытяжные сыры
-        a.catalog-el(href="/catalog-products.html")
+        a.catalog-el(href="./catalog-products.html")
           .catalog-el-img
             img(src="./images/img-product-3.png", alt="")
           .catalog-el-text Масло и спред
-        a.catalog-el(href="/catalog-products.html")
+        a.catalog-el(href="./catalog-products.html")
           .catalog-el-img
             img(src="./images/img-product-4.png", alt="")
           .catalog-el-text Cыворотка
