--- a/app/templates/pages/index.pug
+++ b/app/templates/pages/index.pug
@@ -72,22 +72,22 @@ block content
     .content.news-box
       .news-header
         h2 Новости
-        +link('Все новости', '/news.html', 'true')
+        +link('Все новости', './news_list.html', 'true')
       .news-row
         a.news-item(style="--color_rect: #FFF3D6" 
-          href="news_detail.html")
+          href="./news_list.html")
           .news-item-image
             img(src="./images/news-background-1.jpg" alt="Новость 1")
           .news-content
             .news-time 25.05
               span .2019
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
-        a.news-item(href="news_detail.html")
+        a.news-item(href="./news_list.html")
           .news-content
             .news-time 25.05
               span .2019
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
-        a.news-item(href="news_detail.html")
+        a.news-item(href="./news_list.html")
           .news-content
             .news-time 25.05
               span .2019
