[UPDATE] Адаптив для деталки новости

--- a/app/scss/base/variables.scss
+++ b/app/scss/base/variables.scss
@@ -12,6 +12,8 @@ $breakpoints: (
   'sm': 768px,
   'xs': 480px,
 
+  '950': 950px,
+  
   'custom-1491': 1491px,
   'custom-1235': 1235px,
   'custom-860': 860px,
