--- a/app/scss/base/ui.scss
+++ b/app/scss/base/ui.scss
@@ -28,7 +28,11 @@
     line-height: 24px;
     margin-right: 18px;
     position: relative;
-
+    &.white{
+      &:before{
+        background: #ffffff;
+      }
+    }
     &::after {
       background-image: url('../images/pagination-arrow.svg');
       width: 10.5px;
