--- a/app/scss/components/news/list.scss
+++ b/app/scss/components/news/list.scss
@@ -3,12 +3,12 @@
   @include screen("sm", "max") {
     padding-top: 20px;
   }
-  &.bg-additional{
-    .news{
-      &-type{
-        &:after{
-          border-color:#ffffff;
-          border-right-color:transparent;
+  &.bg-additional {
+    .news {
+      &-type {
+        &:after {
+          border-color: #ffffff;
+          border-right-color: transparent;
         }
       }
     }
@@ -18,6 +18,9 @@
   &-box {
     padding-top: 167px;
     font-family: "CeraPro";
+    @include screen("sm", "max") {
+      padding-top: 120px;
+    }
   }
   &-header {
     display: flex;
@@ -29,6 +32,7 @@
     @include screen("sm", "max") {
       flex-direction: column;
       align-items: flex-start;
+      padding-bottom: 40px;
     }
 
     h2,
@@ -38,7 +42,8 @@
       line-height: 40px;
       font-family: "PFRegalTextPro";
       @include screen("sm", "max") {
-        padding-bottom: 20px;
+        font-size: 30px;
+        line-height: 135%;
       }
     }
 
@@ -275,7 +280,7 @@
       top: 0;
       width: 100%;
       height: 100%;
-      border: 1px solid #F5F2EB;
+      border: 1px solid #f5f2eb;
       border-width: 13px 4px 13px 13px;
       border-right-color: transparent;
     }
@@ -292,7 +297,13 @@
       margin-bottom: 60px;
       max-width: 972px;
       @include screen("sm", "max") {
-        padding-bottom: 20px;
+        font-size: 30px;
+        line-height: 135%;
+        margin-bottom: 30px;
+      }
+      @include screen("xs", "max") {
+        font-size: 24px;
+        line-height: 110%;
       }
     }
   }
@@ -301,7 +312,7 @@
     position: relative;
     z-index: 1;
     margin-bottom: 100px;
-
+    
     &::before {
       content: "";
       display: block;
@@ -317,9 +328,26 @@
     img {
       max-width: 700px;
     }
+    @include screen("950", "max") {
+      margin-bottom: 40px;
+      padding-bottom: 15px;
+      &:before{
+        width: 130vw;
+        left: 50%;
+        height: calc(100% + 30px);
+        transform: translateX(-50%);
+      }
+      img {
+        max-width: 100%;
+      }
+    }
+    
   }
   &-box {
     position: relative;
+    @include screen("950", "max") {
+      padding-bottom: 70px;
+    }
     &::after {
       content: "";
       display: block;
@@ -340,13 +368,19 @@
     font-size: 16px;
     line-height: 24px;
     color: #312930;
-    span{
+    span {
       color: #ee7854;
+    }
+    @include screen("950", "max") {
+      font-size: 12px;
+      line-height: 24px;
+      margin-top: 15px;
     }
   }
   &-content {
     max-width: 700px;
     padding-bottom: 130px;
+
     h4 {
       font-family: PF Regal Text Pro;
       font-style: normal;
@@ -365,6 +399,18 @@
       margin: 15px 0;
       color: #312930;
     }
+    @include screen("950", "max") {
+      padding-bottom: 60px;
+      h4 {
+        font-size: 18px;
+        line-height: 130%;
+        margin-bottom: 20px;
+      }
+      p {
+        font-size: 16px;
+        line-height: 150%;
+      }
+    }
   }
   &-social {
     &-list {
@@ -374,6 +420,17 @@
       top: 0;
       background: #d7f9df;
       padding: 40px 30px;
+      @include screen("950", "max") {
+        position: relative;
+        display: flex;
+        justify-content: space-between;
+        padding: 20px 10px;
+        width: 100vw;
+        margin-left: -40px;
+      }
+      @include screen("xs", "max") {
+        transform: translateX(20px);
+      }
     }
     &-item {
       width: 62px;
@@ -385,6 +442,9 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      @include screen("950", "max") {
+        margin: 0 10px;
+      }
     }
   }
 }
